--- a/unitia-production/docker-compose.yml
+++ b/unitia-production/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3'
 services:
   http1:
     image: "winnovature/unitia:production" 
-    user: "1000:1000"
     ports:
       - "8001:8080"
     volumes:
@@ -16,12 +15,12 @@ services:
       - TZ=Asia/Kolkata  
   http2:
     image: "winnovature/unitia:production"
-    user: "2001:1000"
     ports:
       - "8002:8080"
     volumes:
       - /etc/hosts:/etc/hosts
       - /home/unitia/:/unitia
+      - /logs:/logs 
     depends_on:
       - "router1"
     environment:
@@ -34,6 +33,7 @@ services:
     volumes:
       - /etc/hosts:/etc/hosts
       - /home/unitia/:/unitia
+      - /logs:/logs
     depends_on:
       - "router1"
     environment:
@@ -44,6 +44,7 @@ services:
     volumes:
       - /etc/hosts:/etc/hosts
       - /home/unitia/:/unitia
+      - /logs:/logs
     depends_on:
       - "delivery"
     environment:
@@ -54,6 +55,7 @@ services:
     volumes:
       - /etc/hosts:/etc/hosts
       - /home/unitia/:/unitia
+      - /logs:/logs
     depends_on:
       - "scheduledb"
     environment:
@@ -64,6 +66,7 @@ services:
     volumes:
       - /etc/hosts:/etc/hosts
       - /home/unitia/:/unitia
+      - /logs:/logs
     depends_on:
       - "kannel1"
     environment:
@@ -84,6 +87,7 @@ services:
     volumes:
       - /etc/hosts:/etc/hosts
       - /home/unitia/:/unitia
+      - /logs:/logs
     depends_on:
       - "dnpostdb" 
     environment:
@@ -94,6 +98,7 @@ services:
     volumes:
       - /etc/hosts:/etc/hosts
       - /home/unitia/:/unitia
+      - /logs:/logs
     depends_on:
       - "dbtoredis"
     environment:
@@ -104,6 +109,7 @@ services:
     volumes:
       - /etc/hosts:/etc/hosts
       - /home/unitia/:/unitia
+      - /logs:/logs
     depends_on:
       - "tablereader"
     environment:
@@ -114,6 +120,7 @@ services:
     volumes:
       - /etc/hosts:/etc/hosts
       - /home/unitia/:/unitia
+      - /logs:/logs
     depends_on:
       - "dnhttppost"
     environment:
@@ -124,6 +131,7 @@ services:
     volumes:
       - /etc/hosts:/etc/hosts
       - /home/unitia/:/unitia
+      - /logs:/logs
     depends_on:
       - "redisqueue1"
       - "unitiadb"
@@ -135,6 +143,7 @@ services:
     volumes:
       - /etc/hosts:/etc/hosts
       - /home/unitia/:/unitia
+      - /logs:/logs
     depends_on:
       - "redisqueue1"
       - "kannel1"
@@ -257,6 +266,7 @@ services:
     volumes:
       - /etc/hosts:/etc/hosts
       - /home/unitia/:/unitia
+      - /logs:/logs
     depends_on:
       - "submission"
     environment:
